package com.mhm.action.observer;

/**
 * 观察者
 * 用户监听别人的状态
 * @author MHm
 * @date 2020-4-19 20:55
 */
public interface Observer {
    public void update();
}
